--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
                     </table>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <button type="button" class="btn btn-primary" data-bind="click: checkPuzzle">Check</button>
+                    <button type="button" class="btn btn-primary" data-bind="click: resetPuzzle">Reset</button>
+                </div>
+            </div>
         </div>
 	</body>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/knockout-3.0.0.js"></script>
     <script src="js/sudoku.js"> </script>
