--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
                 padding: 0px;
                 margin: 0px;
             }
+            body {
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+
+            .header {
+                border-bottom: 1px solid #e5e5e5;
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+            .header h3,img {
+                margin-top: 0px;
+                margin-bottom: 0px;
+                line-height: 40px;
+                padding-bottom: 9px;
+                display:inline-block;
+            }
+            #puzzle{
+                margin-top: 10px;
+            }
         </style>
     </head>
 	<body>
         <div class="container">
             <div class="header">
-    		  <h3 class="text-muted">ScriptEd Sudoku</h3>
+                <img src="images/logo-icon.png" style="width:40px;"/>
+                <h3 class="text-muted" style="display:inline-block">ScriptEd Sudoku</h3>
             </div> 
-            <div class="row">
+            <div class="row" id="puzzle">
                 <div class="col-md-6 col-md-offset-3">
                     <table data-bind="foreach: rows">
                         <tr data-bind="foreach: columns">
@@ -39,7 +60,7 @@
             </div>
         </div>
 	</body>
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>    
     <script src="js/bootstrap.min.js"></script>
     <script src="js/knockout-3.0.0.js"></script>
     <script src="js/sudoku.js"> </script>
