--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             }
             #puzzle{
                 margin-top: 10px;
+                margin-bottom: 10px;
             }
         </style>
     </head>
@@ -55,7 +56,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <button type="button" class="btn btn-primary" data-bind="click: checkPuzzle">Check</button>
-                    <button type="button" class="btn btn-primary" data-bind="click: resetPuzzle">Reset</button>
+                    <button type="button" class="btn btn-danger" data-bind="click: resetPuzzle">Reset</button>
                 </div>
             </div>
         </div>
