--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="col-md-6 col-md-offset-3">
                     <table data-bind="foreach: rows">
                         <tr data-bind="foreach: columns">
-                            <td><input type="text" data-bind="value: value, disable: isPuzzleProvided" /></td>
+                            <td><input type="text" data-bind="value: value, disable: isPuzzleProvided, style: { color: isIncorrect() ? 'red' : 'black' }" /></td>
                         </tr>
                     </table>
                 </div>
