--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="images/logo-icon.png">
         <style type="text/css">
             td, input{ 
                 width: 40px; 
