--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <button type="button" class="btn btn-primary" data-bind="click: checkPuzzle">Check</button>
                     <button type="button" class="btn btn-danger" data-bind="click: resetPuzzle">Reset</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3" data-bind="visible: checkPuzzle()">
+                    <img src="images/win.png" class="col-md-8"/>
                 </div>
             </div>
         </div>
