--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
                 <div class="col-md-6 col-md-offset-3">
                     <table data-bind="foreach: rows">
                         <tr data-bind="foreach: columns">
-                            <td><input type="text" data-bind="value: value, disable: isPuzzleProvided, style: { color: isIncorrect() ? 'red' : 'black' }, event: { keyup: $root.checkPuzzle }" /></td>
+                            <td data-bind="style: {
+                                'border-top-width': regionTop() ? '4px' : '2px',
+                                'border-bottom-width': regionBottom() ? '4px' : '2px',
+                                'border-right-width': regionRight() ? '4px' : '2px',
+                                'border-left-width': regionLeft() ? '4px' : '2px'
+                            }">
+                            <input type="text" data-bind="value: value, disable: isPuzzleProvided, style: { color: isIncorrect() ? 'red' : 'black' }, event: { keyup: $root.checkPuzzle }" /></td>
                         </tr>
                     </table>
                 </div>
