--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 width: 40px; 
                 height: 40px; 
                 text-align: center;
-                font-size: 32px;
+                font-size: 140%;
             }
             td {
                 border-style: solid;
@@ -38,6 +38,11 @@
                 margin-top: 10px;
                 margin-bottom: 10px;
             }
+
+            @media only screen and (max-width: 800px){
+                td, input { font-size:100%;}
+            }  
+     
         </style>
     </head>
 	<body>
