--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             }
 
             @media only screen and (max-width: 800px){
-                td, input { font-size:100%;}
+                td, input {  
+                    font-size:70%;
+                }
             }  
      
         </style>
