explicitly color the text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 height: 40px; 
                 text-align: center;
                 font-size: 140%;
+                color: black;
             }
             td {
                 border-style: solid;
